# ClipBox

./: .gitignore  README.md  README_CN.md  example_2025gaokao.json  main.py  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  tailwind.config.js  vercel.json
api/: index.py
api/app/: __init__.py
api/app/routes/: exams.py
app/: __init__.py  config.py  database.py  layout.tsx  page.tsx  utils.py
app/api/ntp-time/: route.ts
app/apistatic/ntp-time/: route.ts
app/routes/: __init__.py  clip.py  exams.py  fileshare.py  likemusic.py  main.py  mets.py  metserver.py  ntptime.py  updater.py  uptime.py
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  vite.config.js
frontend/src/: App.vue  i18n.js  router.js  style.css
frontend/src/views/: Clip.vue  Home.vue
public/: exam_timer.js  index.css  index.html  index.js
public/aplayer/: index.html  likemusic.js
public/clip/: clip.css  clip.js  index.html
public/css/: colors.css  index.css
public/js/: decrypt.js  index.js  metmusic-player.js
public/likemusic/: index.html
public/likemusic/js/: list_function.js  (+3 more)
public/lisfox/: index.html
public/metserver/: get.js  index.html  style.css
public/sponsor/: index.html  sponsor.css
public/time/: index.html
public/uptime/: get.js  index.html  style.css
public/v50/: index.html
pyapp/: __init__.py  config.py
pyapp/routes/: exams.py  main.py  ntptime.py  uptime.py
www/: i18n.js  index.html  index.js  style.css
www/locales/: en.json  zh.json
(+12 files in other folders)
